// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-template should delete a template 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`delete-template should handle non-existent template 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The template could not be found","status":404,"operationStatus":"TemplateNotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;
